--- a/NetCommon/NetCommon.vcxproj.filters
+++ b/NetCommon/NetCommon.vcxproj.filters
@@ -13,36 +13,28 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\Server">
-      <UniqueIdentifier>{a5a59351-5caa-4fe3-b360-0c4762d68819}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Client">
-      <UniqueIdentifier>{7c85c7cb-dec3-48b0-9f44-58c85207ca5b}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Server.cpp">
-      <Filter>Source Files\Server</Filter>
-    </ClCompile>
-    <ClCompile Include="Client.cpp">
-      <Filter>Source Files\Client</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="App.hpp">
+    <ClInclude Include="eol_net.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Client.hpp">
-      <Filter>Source Files\Client</Filter>
+    <ClInclude Include="net_client.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Server.hpp">
-      <Filter>Source Files\Server</Filter>
+    <ClInclude Include="net_common.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NetMessageType.h">
-      <Filter>Source Files\Server</Filter>
+    <ClInclude Include="net_conneciton.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="net_message.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="net_server.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="net_tsqueue.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
