demo client w/ adjustable canvas

--- a/Eloos/Eloos.vcxproj
+++ b/Eloos/Eloos.vcxproj
@@ -169,13 +169,18 @@
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="QueueClient.cpp" />
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.hpp" />
     <ClInclude Include="Client.hpp" />
+    <ClInclude Include="Grid.hpp" />
     <ClInclude Include="NetMessageType.h" />
+    <ClInclude Include="QueueClient.hpp" />
     <ClInclude Include="Server.hpp" />
+    <ClInclude Include="GameMap.hpp" />
+    <ClInclude Include="Ship.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
