--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ project(EOOLS LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Include FTXUI
 include(FetchContent)
@@ -29,10 +28,15 @@ FetchContent_Declare(asio-cmake
 set(ASIO_CMAKE_ASIO_TAG asio-1-28-0)
 FetchContent_MakeAvailable(asio-cmake)
 
+file(GLOB SOURCES
+    src/NetCommon/*.hpp
+    src/*.hpp
+    src/*.cpp
+    src/Game/*.cpp
+    src/Game/*.hpp
+)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/src/NetCommon/)
-
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME} 
   PRIVATE
